[package]
name = "rust-typescript"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
futures = "0.3.31"
rand = "0.8.5"
tokio = { version = "1", default-features = false, features = [
    "fs",
    "rt-multi-thread",
    "sync",
    "time",
] }
scraper = "0.20"
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
] }

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
debug-assertions = true

[profile.test]
inherits = "dev"
